grammar/grammar.ebnf
(* Marex grammar. Whitespace and newlines separate tokens but carry no
   meaning; statements are not terminated by ';'.
   Comments: "//" to end of line, or "/*" ... "*/" (may span lines).   *)

PROGRAM         ::= { STATEMENT }

STATEMENT       ::= VAR_DECL
                  | ASSIGN
                  | INCREMENT
                  | PRINT
                  | SYS
                  | IF_STMT
                  | LOOP_STMT
                  | FUN_DECL
                  | RETURN
                  | EXPR_STMT

VAR_DECL        ::= "var" IDENT [ ":=" EXPR ]          (* no value: NaN *)
ASSIGN          ::= IDENT ":=" EXPR
INCREMENT       ::= IDENT "++"                         (* IDENT := IDENT + 1 *)
PRINT           ::= "print" "(" EXPR ")"
SYS             ::= "sys" "(" STRING ")"               (* run a shell command *)
EXPR_STMT       ::= EXPR

IF_STMT         ::= "if" "(" EXPR ")"
                    { STATEMENT }
                    [ "else" { STATEMENT } ]
                    "fi"

(* The closing "ret" ends the function body. A return value must start on
   the same line as "ret"; "ret" followed by a newline makes the function
   void (a call to it evaluates to NaN). RETURN is only valid inside an
   if/loop within a function body, where it returns early.               *)
FUN_DECL        ::= "fun" IDENT "(" [ IDENT { "," IDENT } ] ")"
                    { STATEMENT }
                    "ret" [ EXPR ]
RETURN          ::= "ret" [ EXPR ]

LOOP_STMT       ::= FOR_LOOP | RANGE_LOOP

FOR_LOOP        ::= "loop" "(" [ VAR_DECL | ASSIGN ] ";" EXPR ";" ( ASSIGN | INCREMENT ) ")"
                    { STATEMENT }
                    "done"

RANGE_LOOP      ::= "loop" ( RANGE | "(" RANGE ")" )
                    { STATEMENT }
                    "done"

RANGE           ::= RANGE_VALUE "->" RANGE_VALUE [ "step" RANGE_VALUE ]
RANGE_VALUE     ::= [ "-" ] ( NUMBER | IDENT )

EXPR            ::= LOGIC_OR

LOGIC_OR        ::= LOGIC_AND { "|" LOGIC_AND }
LOGIC_AND       ::= EQUALITY  { "&" EQUALITY }
EQUALITY        ::= COMPARISON { ( "=" | "!=" ) COMPARISON }
COMPARISON      ::= TERM { ( "<" | ">" ) TERM }
TERM            ::= FACTOR { ( "+" | "-" ) FACTOR }
FACTOR          ::= UNARY { ( "*" | "/" ) UNARY }

UNARY           ::= "-" UNARY
                  | PRIMARY

PRIMARY         ::= NUMBER
                  | FLOAT
                  | STRING
                  | CALL
                  | IDENT
                  | "newln"                            (* the string "\n" *)
                  | "(" EXPR ")"

CALL            ::= IDENT "(" [ EXPR { "," EXPR } ] ")"

NUMBER          ::= DIGIT { DIGIT }
FLOAT           ::= DIGIT { DIGIT } "." DIGIT { DIGIT }
STRING          ::= '"' { any character except '"' } '"'
IDENT           ::= ( LETTER | "_" ) { LETTER | DIGIT | "_" }
